Cleanup, remove unused deps

--- a/app/src/localization/es.json
+++ b/app/src/localization/es.json
@@ -3,7 +3,7 @@
   "Logout": "Salir",
   "New List": "Nueva Lista",
   "Next Step": "Siguiente",
-  "No results for '{{query}}'": "Ningún resultado para '{{query}}'",
+  "No results for '{{query}}'": "No hay resultados para '{{query}}'",
   "Previous Step": "Regresar",
   "Search powered by": "Búsqueda proporcionada por",
   "en": "Inglés",
