--- a/app/src/localization/es.json
+++ b/app/src/localization/es.json
@@ -1,11 +1,15 @@
 {
+  "Account": "Cuenta",
+  "Change language": "Cambiar idioma",
+  "English": "Inglés",
   "Login": "Entrar",
   "Logout": "Salir",
   "New List": "Nueva Lista",
   "Next Step": "Siguiente",
   "No results for '{{query}}'": "No hay resultados para '{{query}}'",
   "Previous Step": "Regresar",
+  "Search players": "Buscar jugadores",
   "Search powered by": "Búsqueda proporcionada por",
-  "en": "Inglés",
-  "es": "Español"
+  "Spanish": "Español",
+  "Toggle dark": "Cambiar tema"
 }
