Save user settings in storage

--- a/app/src/localization/es.json
+++ b/app/src/localization/es.json
@@ -1,7 +1,7 @@
 {
   "Account": "Cuenta",
   "Change language": "Cambiar idioma",
-  "Clear query": "Borrar consulta",
+  "Clear query": "Borrar búsqueda",
   "English": "Inglés",
   "Login": "Entrar",
   "Logout": "Salir",
