Move oauth logic to redux

--- a/app/src/localization/en.json
+++ b/app/src/localization/en.json
@@ -10,6 +10,7 @@
   "No results for '{{query}}'": "No results for '{{query}}'",
   "Previous Step": "Previous Step",
   "Search players": "Search players",
+  "Save": "Save",
   "Search powered by": "Search powered by",
   "Spanish": "Spanish",
   "Toggle dark": "Toggle dark",
