--- a/app/src/localization/es.json
+++ b/app/src/localization/es.json
@@ -9,6 +9,7 @@
   "Next Step": "Siguiente",
   "No results for '{{query}}'": "No hay resultados para '{{query}}'",
   "Previous Step": "Regresar",
+  "Save": "Guardar",
   "Search players": "Buscar jugadores",
   "Search powered by": "Búsqueda proporcionada por",
   "Spanish": "Español",
