Remove unused code and deps

--- a/app/src/localization/en.json
+++ b/app/src/localization/en.json
@@ -9,9 +9,10 @@
   "Next Step": "Next Step",
   "No results for '{{query}}'": "No results for '{{query}}'",
   "Previous Step": "Previous Step",
-  "Search players": "Search players",
   "Save": "Save",
+  "Search players": "Search players",
   "Search powered by": "Search powered by",
+  "Showing results for '{{query}}'": "Showing results for '{{query}}'",
   "Spanish": "Spanish",
   "Toggle dark": "Toggle dark",
   "{{option}} is already in the list": "{{option}} is already in the list"
