--- a/app/src/localization/es.json
+++ b/app/src/localization/es.json
@@ -12,6 +12,7 @@
   "Save": "Guardar",
   "Search players": "Buscar jugadores",
   "Search powered by": "Búsqueda proporcionada por",
+  "Showing results for '{{query}}'": "Mostrando resultados para '{{query}}'",
   "Spanish": "Español",
   "Toggle dark": "Cambiar tema",
   "{{option}} is already in the list": "{{option}} ya está en la lista"
